<resources>
    <string name="app_name">whatsapp_clone</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="icon_img">icon_img</string>
    <string name="login_header">Member Login</string>
    <string name="username_placeholder">Enter Username</string>
    <string name="password_placeholder">Enter Password</string>
    <string name="show_password">show password</string>
    <string name="lock_icon">lock</string>
    <string name="username_icon">username</string>
    <string name="loginBtn">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_link_text">Register Here</string>
    <string name="right_arrow_icon">right arrow</string>
    <string name="left_arrow_icon">left arrow</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="temp_date">12/06/2023</string>
    <string name="search">Search</string>
    <string name="add">add</string>
    <string name="add_contact">add contact</string>
    <string name="add_new_contact">Add new Contact</string>
    <string name="write_contact_name">write Contact name...</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="user_profile_picture">user\'s profile picture</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="back_button">back button</string>
    <string name="register_title">Register</string>
    <string name="chat_title">Chats</string>
    <string name="login_title">Login</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="set_url">set URL</string>
    <string name="night_mode">night mode</string>
    <string name="logout">Logout</string>
    <string name="notification_title">New Message</string>
    <string name="notification_message">this is description message</string>
    <string name="notification_logo">notification_logo</string>

</resources>