<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/notification_logo" />

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#43651B"
            android:text="@string/notification_title"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/app_logo"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/notification_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#81CC27"
            android:text="@string/notification_message"
            android:textSize="17sp"
            android:layout_toRightOf="@id/app_logo"
            android:layout_below="@id/notification_title"
            android:layout_marginLeft="10dp"
            />
    </RelativeLayout>

</RelativeLayout>