<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundRegister"
    tools:context=".Views.Fragments.RegisterFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="39dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp"
            android:layout_marginTop="@dimen/cardview_default_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/InputLayoutStyle"
                android:hint="@string/email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/displayNameInputLayout"
                style="@style/InputLayoutStyle"
                android:hint="@string/username"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/displayNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/PasswordLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordConfirmationInputLayout"
                style="@style/PasswordLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordConfirmationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/uploadPictureBtn"
                style="Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/cardview_default_elevation"
                android:text="Upload profile picture"
                android:textColor="@color/white"
                android:tint="@color/white"
                app:icon="@drawable/ic_picture_uploade"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/registerBtn"
                style="Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/user_profile_picture"
                android:fadingEdge="horizontal"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/add_contact_background"
                android:visibility="invisible" />

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>