<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/CONTAINER_BACKGROUND"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="30dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="10dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/login_pic"
                style="@style/loginPic" />

            <TextView
                android:id="@+id/login_form_title"
                style="@style/loginTitle"
                android:layout_below="@+id/login_pic"
                android:layout_marginTop="30dp" />

            <!-- Username Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input_layout"
                style="@style/PasswordLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_form_title"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_input"
                    style="@style/usernameInput"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/PasswordLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_input_layout"
                android:layout_marginTop="16dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    style="@style/passwordInput"
                    android:inputType="textPassword"
                    android:hint="@string/password_placeholder" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Username Icon -->
            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/username_input_layout"
                android:layout_alignTop="@id/username_input_layout"
                android:layout_alignBottom="@id/username_input_layout"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/username_icon"
                android:padding="5dp"
                android:src="@drawable/ic_username_icon"
                app:tint="#666666" />

            <!-- Password Icon -->
            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/password_input_layout"
                android:layout_alignBottom="@id/password_input_layout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/lock_icon"
                android:padding="5dp"
                android:src="@drawable/ic_password_icon"
                app:tint="#666666" />



            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_input_layout"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/loginBtn"
                android:padding="12dp"
                android:text="@string/loginBtn"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/register_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:gravity="center_horizontal"
                style="@style/registerBtn" />

            <ImageView
                android:id="@+id/right_arrow_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/register_link"
                android:layout_alignBottom="@id/register_link"
                android:layout_alignParentRight="true"
                style="@style/rightArrow" />

            <ImageView
                android:id="@+id/left_arrow_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/register_link"
                android:layout_alignBottom="@id/register_link"
                style="@style/leftArrow" />

        </RelativeLayout>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
