<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:padding="8dp">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_contact_et" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_new_contact"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cancel_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <!--    <EditText-->
    <!--        android:id="@+id/add_contact_et"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_margin="16dp"-->
    <!--        android:background="@drawable/add_contact_background"-->
    <!--        android:ellipsize="end"-->
    <!--        android:hint="@string/write_contact_name"-->
    <!--        android:maxLines="1"-->
    <!--        android:padding="8dp"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/view" />-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_contact_etLa"
            style="@style/InputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:hint="@string/write_contact_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_contact_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_contact_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add"
            style="@style/BUTTON"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_contact_etLa"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>