<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fullScreen"
    style="@style/SCREEN">


    <TextView
        android:id="@+id/tv_settings"
        style="@style/SETTING_TEXTS"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings">

        <LinearLayout
            android:id="@+id/current_user_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/currentUserImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                app:civ_border_color="@color/black" />

            <TextView
                android:id="@+id/tvUserDisplayName"
                style="@style/SETTING_TEXTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="SaarAzari"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="8dp"
            android:background="@color/dark_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_user_details">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/llDarkMode"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDarkMode"
                    style="@style/ICONS"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/ic_dark_mode" />

                <TextView
                    android:id="@+id/tvDarkMode"
                    style="@style/SETTING_TEXTS"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/night_mode"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:layout_weight="0.1"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

       



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/llChangeApi"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivChangeApi"
                        style="@style/ICONS"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_marginStart="7dp"
                        android:layout_weight="0.1"
                        app:srcCompat="@drawable/ic_change" />

                    <TextView
                        android:id="@+id/tvChangeApi"
                        style="@style/SETTING_TEXTS"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/set_url"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ivChangeApi1"
                        style="@style/ICONS"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0.1"
                        app:srcCompat="@drawable/ic_open_setting" />
                </LinearLayout>

                <EditText
                    android:visibility="gone"
                    android:id="@+id/set_url_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/logoutLayout"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivLogout"
                    style="@style/ICONS"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/ic_logout"/>


                <TextView
                    android:id="@+id/tvLogout"
                    style="@style/SETTING_TEXTS"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    style="@style/ICONS"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/ic_open_setting" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>